--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <style>
 html{
-    width:100%;
-    height:100%;
-    margin: 0;
-    padding: 0;
+    width: 100%;
+    margin: auto;
+    position: relative;
+    min-height: 100%;
 }
 body{
     font-family: Verdana, Geneva, sans-serif;
@@ -84,20 +84,27 @@ body{
         <script language="javascript" src="./js/grid.js" type="text/javascript"></script>
         <script language="javascript" src="./js/util.js" type="text/javascript"></script>
 
-        <link rel="icon" type="image/png" href="/favicon.png"/>
+        <link rel="icon" type="image/png" href="./favicon.png"/>
+        <script src="http://code.jquery.com/jquery.min.js"></script>
     </head>
     <body>
+        <div id="nav-container"></div>
+        <script type="text/javascript">
+        $(document).ready(function() {
+        $('#nav-container').load('/nav.html');
+        });
+        </script>
         
         <div class="content" id="content">
             <div class="section">
-                <div class="heading">Squares & Roots</div>
+                <div class="heading">Numbers on a Line</div>
                 <div class="paragraph">
                     <p><b>Square</b> any number, and you get another number.</p>
                     <!-- <p><b>Square</b> any number, and you get another number.</p> -->
                     <p><b>-1&Cross;-1=1</b>, so any <b>negative</b> number squared is a <b>positive</b> number.</p>
                     <p>So what is the <b>square root</b> of a negative number? What times itself equals <b>-1</b>?</p>
                     <p>Let's call the square root of -1 <b>i</b>. All we know about <b>i</b> is that <b>i&Cross;i=-1</b>.</p>
-                    <p>There's no <b>i</b> on our left-right number line, so it goes on a new up-down number line.</p>
+                    <p>There's no <b>i</b> on our left-right number line, so it goes on a new <b>up-down number line</b>.</p>
                 </div>
                 <div class="displays" id="squareDisplays">
                     <canvas class="canvas" id="rootCanvas" width="320" height="320"></canvas>
@@ -107,7 +114,7 @@ body{
             </div>
 
             <div class="section">
-                <div class="heading">Add & Subtract</div>
+                <div class="heading">Points on a Plane</div>
                 <div class="paragraph">
                     <p>Our two number lines make an XY plane, where each point is <b>X+Yi</b></p>
                     <p>We can add points together—<b>2i+2i=4i</b>, just like <b>2+2=4</b></p>
@@ -124,7 +131,7 @@ body{
             </div>
 
             <div class="section">
-                <div class="heading">Multiply & Divide</div>
+                <div class="heading">Magic</div>
                 <div class="paragraph">
                     <p>We can also <b>multiply</b> points. Remember that <b>i&Cross;i=-1</b>, so <b>2i&Cross;3i=-6</b></p>
                     <p>Multiplying a point will <b>scale</b> and <b>rotate</b> it.</p>
@@ -151,6 +158,13 @@ body{
                 element: document.getElementById("multiplyDisplays"),
                 operation: math.multiply,
             });
+        </script>
+
+        <div id="footer-container"></div>
+        <script type="text/javascript">
+        $(document).ready(function() {
+        $('#footer-container').load('/footer.html');
+        });
         </script>
     </body>
 </html>
