--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body{
                 <div class="heading">Points on a Plane</div>
                 <div class="paragraph">
                     <p>Our two number lines make an <b>XY plane</b>. Each point is <b>X+Yi</b></p>
-                    <p>We can <b>add</b> points together—<b>2i+2i=4i</b>, just like <b>2+2=4</b></p>
+                    <p>We can <b>add</b> points together. <b>2i+2i=4i</b>, just like <b>2+2=4</b></p>
                     <p>Add any two points, and you get another point.</p>
                     <p>Now we can move points around the plane!</p>
                 </div>
