--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ iframe {
                 <!-- <div class="heading">i&Cross;i = -1</div> -->
                 <div class="heading">i<sup>2</sup> = -1</div>
                 <div class="paragraph">
-                    <p>What is the <b>square root</b> of -1?<br>What times itself is less than zero?</p>
+                    <p>What is the <b>square root</b> of <b>-1</b>?<br>What times itself is less than zero?</p>
                     <p>Let's call the square root of -1 <b>i</b>.<br>All we know about <b>i</b> is that <b>i&Cross;i=-1</b>.</p>
                     <p>There's no <b>i</b> on our <b>left-right</b> number line,<br>so it goes on a new <b>up-down</b> number line.</p>
                 </div>
@@ -234,7 +234,8 @@ iframe {
             <div class="section">
                 <div class="heading">Magic</div>
                 <div class="paragraph">
-                    <p>We can also <b>multiply</b> points. Remember that <b>i&Cross;i=-1</b>, so <b>2i&Cross;3i=-6</b>.</p>
+                    <p>We can also <b>multiply</b> points.</p>
+                    <p>Remember that <b>i&Cross;i=-1</b>, so <b>2i&Cross;3i=-6</b>.</p>
                     <p>Multiplication <b>rotates</b> and <b>scales</b> complex numbers.</p>
                     <p>Now we can stretch and spin!</p>
                 </div>
