--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<!-- Oh god you're actually looking at the source for this project? Don't do that, it's a total mess. Seriously, turn back now. It's a spaghetti frankenstein. -->
+
 <style>
 html{
     width: 100%;
@@ -168,6 +171,16 @@ iframe {
         <meta charset="utf-8">
         <title>Simple Numbers</title>
 
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-98651852-2', 'auto');
+        ga('send', 'pageview');
+        </script>
+
         <script language="javascript" src="./libs/mathjs/dist/math.js" type="text/javascript"></script>
         <script language="javascript" src="./libs/minpubsub/minpubsub.js" type="text/javascript"></script>
 
@@ -260,13 +273,15 @@ iframe {
                     <p>The <b>Complex Plane</b> provides a simple and direct<br>connection between <b>algebra</b> and <b>geometry</b>.</p>
                     <p>
                         To learn more about the beautiful world of <b>Complex Analysis</b>,<br>I recommend
-                        <a href="https://www.amazon.com/Indras-Pearls-Vision-Felix-Klein/dp/1107564743/ref=sr_1_1?ie=UTF8&qid=1495988205&sr=8-1&keywords=indras+pearls">Indra's Pearls</a> and 
-                        <a href="https://www.amazon.com/Visual-Complex-Analysis-Tristan-Needham/dp/0198534469">Visual Complex Analysis</a>.
+                        <a href="https://www.amazon.com/gp/product/1107564743/ref=as_li_tl?ie=UTF8&tag=polytrope-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1107564743&linkId=038741fd79b3f24d8b11cad47d9a8dad"
+                            onclick="trackOutboundLink('https://www.amazon.com/gp/product/1107564743/ref=as_li_tl?ie=UTF8&tag=polytrope-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1107564743&linkId=038741fd79b3f24d8b11cad47d9a8dad'); return false;">Indra's Pearls</a> and 
+                        <a href="https://www.amazon.com/gp/product/0198534469/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0198534469&linkCode=as2&tag=polytrope-20&linkId=b57c1f9e35aababad8a600fd002b8da3"
+                            onclick="trackOutboundLink('https://www.amazon.com/gp/product/0198534469/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0198534469&linkCode=as2&tag=polytrope-20&linkId=b57c1f9e35aababad8a600fd002b8da3'); return false;">Visual Complex Analysis</a>.
                     </p>
                     <p>
                         If you're not looking to read a whole book, here's a 3-minute summary:<br>
                     </p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/0z1fIsUNhO4" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/0z1fIsUNhO4" frameborder="0" allowfullscreen onclick="trackOutboundLink('https://www.youtube.com/embed/0z1fIsUNhO4'); return false;"></iframe>
                 </div>
             </div>
         </div>
@@ -282,6 +297,14 @@ iframe {
                 element: document.getElementById("multiplyDisplays"),
                 operation: math.multiply,
             });
+
+            trackOutboundLink = function(url) {
+                console.log("Tracking outbound link to "+url);
+                ga('send', 'event', 'outbound', 'click', url, {
+                 'transport': 'beacon',
+                 'hitCallback': function(){document.location = url;}
+                });
+            }
         </script>
 
         <div id="footer-container"></div>
