--- a/index.html
+++ b/index.html
@@ -272,14 +272,14 @@ iframe {
                 <div class="paragraph">
                     <p>The <b>Complex Plane</b> provides a simple and direct<br>connection between <b>algebra</b> and <b>geometry</b>.</p>
                     <p>
-                        To learn more about the beautiful world of <b>Complex Analysis</b>,<br>I recommend
+                        To learn about the beautiful world of <b>Complex Analysis</b>,<br>I recommend
                         <a href="https://www.amazon.com/gp/product/1107564743/ref=as_li_tl?ie=UTF8&tag=polytrope-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1107564743&linkId=038741fd79b3f24d8b11cad47d9a8dad"
                             onclick="trackOutboundLink('https://www.amazon.com/gp/product/1107564743/ref=as_li_tl?ie=UTF8&tag=polytrope-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1107564743&linkId=038741fd79b3f24d8b11cad47d9a8dad'); return false;">Indra's Pearls</a> and 
                         <a href="https://www.amazon.com/gp/product/0198534469/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0198534469&linkCode=as2&tag=polytrope-20&linkId=b57c1f9e35aababad8a600fd002b8da3"
                             onclick="trackOutboundLink('https://www.amazon.com/gp/product/0198534469/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0198534469&linkCode=as2&tag=polytrope-20&linkId=b57c1f9e35aababad8a600fd002b8da3'); return false;">Visual Complex Analysis</a>.
                     </p>
                     <p>
-                        If you're not looking to read a whole book, here's a 3-minute summary:<br>
+                        Not looking to read a whole book? Here's the 3-minute version:<br>
                     </p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/0z1fIsUNhO4" frameborder="0" allowfullscreen onclick="trackOutboundLink('https://www.youtube.com/embed/0z1fIsUNhO4'); return false;"></iframe>
                 </div>
