More words. Twitter link at end.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ a {
 }
 
 iframe {
-    margin-top: 32px;
+    margin: 32px auto;
 }
 
 .content {
@@ -281,7 +281,10 @@ iframe {
                     <p>
                         Not looking to read a whole book? Here's the 3-minute version:<br>
                     </p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/0z1fIsUNhO4" frameborder="0" allowfullscreen onclick="trackOutboundLink('https://www.youtube.com/embed/0z1fIsUNhO4'); return false;"></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/JX3VmDgiFnY" frameborder="0" allowfullscreen onclick="trackOutboundLink('https://www.youtube.com/embed/JX3VmDgiFnY'); return false;"></iframe>
+                    <p>
+                        Thanks for reading! <a href="http://twitter.com/EnDimensions" onclick="trackOutboundLink('http://twitter.com/EnDimensions'); return false;">Stay tuned</a> for more explorables like this.<br>
+                    </p>
                 </div>
             </div>
         </div>
