Thumbnail and meta tags

--- a/index.html
+++ b/index.html
@@ -193,6 +193,12 @@ iframe {
 
         <link rel="icon" type="image/png" href="./favicon.png"/>
         <script src="http://code.jquery.com/jquery.min.js"></script>
+
+        <meta property="og:title" content="Simple Numbers">
+        <meta property="og:description" content="Complex numbers in 3 simple steps.">
+        <meta property="og:image" content="http://polytrope.com/simplenumbers/res/thumbnail.png">
+        <meta property="og:url" content="http://polytrope.com/simplenumbers/index.html">
+        <meta property="twitter:card" content="summary">
     </head>
     <body>
         <div id="nav-container"></div>
