Twitter card type

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ iframe {
         <meta property="og:description" content="Complex numbers in 3 simple steps.">
         <meta property="og:image" content="http://polytrope.com/simplenumbers/res/thumbnail.png">
         <meta property="og:url" content="http://polytrope.com/simplenumbers/index.html">
-        <meta property="twitter:card" content="summary">
+        <meta property="twitter:card" content="summary_large_image">
     </head>
     <body>
         <div id="nav-container"></div>
