--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@ iframe {
     <head>
         <meta charset="utf-8">
         <title>Simple Numbers</title>
+        <link rel="icon" type="image/png" href="/favicon.png"/>
 
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -191,7 +192,6 @@ iframe {
         <script language="javascript" src="./js/grid.js" type="text/javascript"></script>
         <script language="javascript" src="./js/util.js" type="text/javascript"></script>
 
-        <link rel="icon" type="image/png" href="./favicon.png"/>
         <script src="http://code.jquery.com/jquery.min.js"></script>
 
         <meta property="og:title" content="Simple Numbers">
